# token_launchpad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/launchpad/: Cargo.toml
contracts/launchpad/src/: contract.rs  event.rs  lib.rs  storage_types.rs  test.rs
contracts/launchpad/test_snapshots/test/: test_double_initialize_panics.1.json  test_get_creator_tokens.1.json  test_get_token_info.1.json  test_initialize.1.json  test_launch_token_inter_contract.1.json  test_multiple_launches_and_pagination.1.json  test_set_launch_fee.1.json
contracts/token/: Cargo.toml
contracts/token/src/: allowance.rs  balance.rs  contract.rs  event.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_double_initialize_panics.1.json  test_initialize.1.json  test_mint_and_balance.1.json  test_set_admin.1.json  test_transfer.1.json  test_transfer_insufficient_balance.1.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: FundAccountBanner.tsx  LaunchForm.tsx  Navbar.tsx  TokenCard.tsx  WalletButton.tsx
frontend/src/hooks/: useLaunchpad.ts  useWallet.ts
frontend/src/lib/: constants.ts  freighter.ts  stellar.ts
frontend/src/pages/: ExplorePage.tsx  HomePage.tsx  LaunchPage.tsx  MyTokensPage.tsx  NotFoundPage.tsx  TokenDetailPage.tsx
scripts/: deploy.sh
