[package]
name = "soroban-launchpad-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
soroban-token-contract = { path = "../token", features = ["testutils"] }
